preparing board view

--- a/clans_by_grivin/clansbygrivin.css
+++ b/clans_by_grivin/clansbygrivin.css
@@ -83,6 +83,7 @@
     background: white;
     opacity: 0.8;
     cursor: pointer;
+    position: absolute;
 }
 
 /* TODO : use a real image for house */
