--- a/clans_by_grivin/clansbygrivin.css
+++ b/clans_by_grivin/clansbygrivin.css
@@ -119,7 +119,7 @@
     opacity: 0.3;
 }
 
-/* TODO : use a real image for huts */
+/* TODO : use a real image for huts #10 */
 
 .hut {
     width: 20px;
