place secret color (not revealed) on player board

--- a/clans_by_grivin/clansbygrivin.css
+++ b/clans_by_grivin/clansbygrivin.css
@@ -155,6 +155,11 @@
     background: dodgerblue;
 }
 
+/* secret color not revealed */
+.color_secret {
+    background: white;
+}
+
 
 .bonus {
     width: 60px;
